--- a/manual/overview.wiki
+++ b/manual/overview.wiki
@@ -28,8 +28,7 @@ Js_of_ocaml is composed of multiple packages:
 == Installation ==
 === Requirements ==
 * dune
-* Cmdliner, cppo (for the compiler)
-* ppx_tools_versioned, ocaml-migrate-parsetree (for the js_of_ocaml base library)
+* Cmdliner, ppx_tools_versioned, ocaml-migrate-parsetree
 
 See opam files at the root of the repository for version constraints.
 
