--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@
  ** Misc: remove cppo dependency
  ** Misc: remove ppx_tools_versioned dependency in ppx_deriving_json
  ** Misc: support for ocaml 4.09
+ ** Lib: Add support for 'addEventListener' with options
 
  * Bug fixes:
  ** Compiler: don't generate source if no-source-map passed (#780)
