--- a/manual/overview.wiki
+++ b/manual/overview.wiki
@@ -25,37 +25,12 @@ Js_of_ocaml is composed of multiple packages:
   * js_of_ocaml-toplevel, lib and tools to build an ocaml toplevel to
     javascript.
 
-== Installation ==
-=== Requirements ==
-* dune
-* Cmdliner, ppx_tools_versioned, ocaml-migrate-parsetree
+== Installation
 
-See opam files at the root of the repository for version constraints.
-
-Optional dependencies:
-  * tyxml(see https://github.com/ocsigen/tyxml)
-  * reactiveData(see https://github.com/ocsigen/reactiveData)
-  * yojson(see https://github.com/mjambon/yojson)
-
-=== Install from opam
+The easiest way to install js_of_ocaml is to use opam.
 {{{opam install js_of_ocaml js_of_ocaml-ppx js_of_ocaml-lwt}}}
 
-=== Build and install from source
-{{{
-make
-}}}
-{{{
-opam-installer js_of_ocaml-compiler
-}}}
-{{{
-opam-installer js_of_ocaml
-}}}
-{{{
-opam-installer js_of_ocaml-ppx
-}}}
-{{{
-opam-installer js_of_ocaml-lwt
-}}}
+For alternatives, see <<a_manual chapter="install" |Install>>.xs
 
 == Usage ==
 
@@ -81,7 +56,8 @@ opam-installer js_of_ocaml-lwt
   It support both standard and separate compilation of javascript
   files. See https://dune.readthedocs.io/en/latest/jsoo.html
 
-You can find an OCaml toplevel running in the browser <<a_file src="toplevel/index.html" |here>>. See also <<a_manual chapter="quickstart" |Quickstart>>.
+=== toplevel ===
+You can find an OCaml toplevel running in the browser <<a_file src="toplevel/index.html" |here>>.
 
 == Supported features ==
 
