--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
  ** Compiler: Allow to emit one javascript per compilation unit (#783)
  ** Compiler: refactoring (#781, #782, #787, #795, #802)
  ** Compiler: more source map location for the javascript runtime (#795)
+ ** Compiler: tune variable naming (#838)
  ** Runtime: support sharing when marshaling (#814)
  ** Ppx: switch ppx rewriter to the OCaml 4.08 ast
  ** Misc: Improve CI speed
@@ -13,18 +14,22 @@
  ** Misc: remove ppx_tools_versioned dependency in ppx_deriving_json
  ** Misc: support for ocaml 4.09
  ** Misc: switch to ocamlformat.0.10
+ ** Lib: Use expect tests
  ** Lib: Add support for 'addEventListener' with options (#807)
 
  * Bug fixes:
  ** Compiler: don't generate source if no-source-map passed (#780)
  ** Compiler: Fix compilation of [Array.set] to return [unit]/0 (#792)
  ** Compiler: Fix assertion failure (#828)
+ ** Compiler: Fix compilation of exception handlers (#830)
  ** Misc: Fix install on windows (#794)
  ** Lib: Fix Dom_svg.createForeignObject (#756)
  ** Runtime: Fix caml_obj_tag, causing miscompilation with lazy value (#772)
  ** Runtime: Fix caml_ml_seek_out, caml_ml_pos_out (#779) (Shachar Itzhaky)
  ** Runtime: caml_parse_sign_and_base to support unsigned syntax (#792) (Shachar Itzhaky)
  ** Runtime: fix encoding when printing to stdout (#800)
+ ** Runtime: Handle browserfs in fs_node detection logic (#831)
+ ** Runtime: fix Obj.tag (#832)
 
 ===== 3.4.0 (2019-04-17) - Hong Kong =====
  * Features/Changes
