Runime: add support for Str

--- a/manual/overview.wiki
+++ b/manual/overview.wiki
@@ -66,10 +66,11 @@ Most of the OCaml standard library is supported. However,
     A dummy implementation is provided.
   * Most of Sys module is not supported.
 
-Extra libraries distributed with Ocaml (such as Thread or Str) are not
+Extra libraries distributed with Ocaml (such as Thread) are not
 supported in general. However,
   * Bigarray: bigarray are supported using Typed Arrays
   * Num: supported
+  * Str: supported
   * Graphics: partially supported using canvas (see also js_of_ocaml-lwt.graphics)
   * Unix: time related functions are supported
 
